[tool.poetry]
name = "flixbuff-api"
version = "0.1.0"
description = "A social network for tv series enjoyers"
license = "GPL-3.0-only"
authors = ["torchu <victor.cabritag@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.5"
python-dotenv = "^0.20.0"
Flask = "2.1.3"
flask-rest-api = "^0.17.1"
Werkzeug = "2.0.3"
Flask-PyMongo = "^2.3.0"
requests = "^2.28.1"
webargs = "5.4.0"
Flask-JWT-Extended = "^4.4.4"
Flask-Cors = "^3.0.10"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
pytest = "^7.1.2"
taskipy = "^1.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "pylint ."
test = "pytest"
start = "python app.py"

[tool.pytest.ini_options]
pythonpath = "."
usefixtures = "app_context"
